--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@ button:hover {
     width: 50%;
     max-height: 70vh;
     object-fit: contain;
+    border: 3px solid black;
+    background-color: black;
+    padding: 6px;
 }
 
 #phraseText,
@@ -97,5 +100,13 @@ button:hover {
 .country-option img {
     width: 28px;
     height: auto;
+    border-radius: 3px;
+}
+
+.inline-flag {
+    width: 28px;
+    height: auto;
+    margin-left: 10px;
+    vertical-align: middle;
     border-radius: 3px;
 }
